Remove dependency on Google

--- a/gametrack.component.html
+++ b/gametrack.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="card" style="background-color: #fff;">
         <div [formGroup]="gtForm" style="text-align: center;">
-            <input id='ssID' type="text" formControlName="spreadsheetValue" required placeholder="Enter Spreadsheet ID">
+            <!-- <input id='ssID' type="text" formControlName="spreadsheetValue" required placeholder="Enter Spreadsheet ID"> -->
             <button (click)="setDefaultI()" href=""><i class="fa fa-skype"></i></button>
             <button (click)="setDefaultS()" href=""><i class="fa fa-eye"></i></button>
             <input id='desc' type="text" formControlName="description"  placeholder="Description">
