--- a/gametrack.component.html
+++ b/gametrack.component.html
@@ -2,13 +2,13 @@
     <div class="card" style="background-color: #fff;">
         <div [formGroup]="gtForm" style="text-align: center;">
             <!-- <input id='ssID' type="text" formControlName="spreadsheetValue" required placeholder="Enter Spreadsheet ID"> -->
-            <button (click)="setDefaultI()" href=""><i class="fa fa-skype"></i></button>
-            <button (click)="setDefaultS()" href=""><i class="fa fa-eye"></i></button>
-            <input id='desc' type="text" formControlName="description"  placeholder="Description">
+            <!-- <button (click)="setDefaultI()" href=""><i class="fa fa-skype"></i></button> -->
+            <!-- <button (click)="setDefaultS()" href=""><i class="fa fa-eye"></i></button> -->
+            <!-- <input id='desc' type="text" formControlName="description"  placeholder="Description"> -->
         </div>
         <div class="link-bar">
             <!-- <button class="btn-info" id="newSpreadsheet" (click)="this.createSpreadsheet('MyNewSpreadsheet');">New Spreadsheet</button> -->
-            <button class="" id="addRow" (click)="this.addGameToSpreadsheet();"><i class="fa fa-file"></i>  New Game</button>
+            <!-- <button class="" id="addRow" (click)="this.addGameToSpreadsheet();"><i class="fa fa-file"></i>  New Game</button> -->
             <button class="" id="clear" (click)="this.resetAllStats();" ><i class="fa fa-refresh"></i>  Reset Values</button>
         </div>
     </div>
